Fixed Purchased Order Form button should visible properly

--- a/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/checkout/_payments.less
+++ b/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/checkout/_payments.less
@@ -58,6 +58,11 @@
                     }
                 }
             }
+            .form-purchase-order {
+                #po_number {
+                    margin-bottom: 20px;
+                }
+            }
         }
 
         .payment-method-title {
